Fixed the forkme badge z-index

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -53,7 +53,7 @@ h1 span{
   position: absolute;
   display:block;
   top: 40px;
-  z-index: -1;
+  z-index: 10;
   right: 0;
 }
 
